--- a/SistemaARD/Vistas/AdministracionPlanilla.resx
+++ b/SistemaARD/Vistas/AdministracionPlanilla.resx
@@ -188,4 +188,39 @@
         xOXNA6lJzvPtKfqx5gGUrVtf4iVeYISE/AfLQYg0z6wZGQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="btnAguinaldo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAC0AAAAtCAYAAAA6GuKaAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABrhJREFUaEPtWG1olWUYPgZFn2ARUZmHmm1NUypXzrXNmdvY2jvP5uzoNtOTH0nO
+        2iI/9uIqv9L8AK3IiRWVP7TSabnASTtzm29OiiBBpR/VD6NUIuz4EaTBfXVfz/uaZ6dz3goMg84FF8/9
+        PNd13/fFztjGAmmkkUYaafwjDG6QqkEN8s0dc4FUpH77XKn0Wi4vhoVx1V1PyZmMp6RT2ZyK6okqT9Hv
+        tV4+DJuNYPZsIPtJmZU5BxmpSJ0++r3WyweGGDEL+Lv8T4TO0RA5M4Cc6dLy4HSUpCJ14/svhM6fiuDo
+        CDAqItbIKXJb3hMIJ5Lv1Omj32u9fGCIMVOBwilikawTGa/9K6HL9KtSPEV2j6uXn/Q8mZT18r2eqwMB
+        DCjREMVTAL1bLrWulxEF9biRZ6JGv7fq0qG8Vt4uq5Uflc+XT5bmZCybLK+V1wLldTK+JIwga/VbpFe3
+        ltViFc9EjX5v1aVDaJI4obC019Qgw4/qO1MVluZKDVE1CQg9JhbJumqSHFX9W56JGv3eqkuHiTXiPDYR
+        +DsM18AOawhznyCWId+9YH7aJUXtBHHqqqWrvgYlflTf2bpqN3TdBEDvFsk6PnQqra5KJuqenbXV0pmM
+        qnXUTZAXIhFcTb8vIiFxpoVki6mrUP1ECOF4Ph6SXGrTQohFQrCnViKoPmifZag13+hJpUXGy+hIlYju
+        2T+tCtuSUfVd2nNOz5Wc5YuZljizLDf0zErEZlUC/RinKe3ZGoLvMyrEIlnzjZ5U2oxKma97flm8GFfQ
+        lwozK2X7TAs93jU15lSI01DhBmuoQKzhUZk3x8KNpL4f6KdVuKH1hPZZJOv40Mk09ukc0dkn/4LnmIez
+        fNFUJk5TuRussRwxrecYQZGoKe3GEgSbyoFny8QiWfPNeFJo7NNZvzaWYZUf1XOEOznLF/NLxVlQ6gab
+        X4qY3o8uKMEXpNZn+mklsJs1xIJSYF6xWCTrhcUywtZPhmeiRj/72M8580rlOnrj2VSEgdS4i3lY+2LR
+        OHFaxrnBWsYh5t03kYuK5Xi81uKFbikGVLNI1omM14xf+9jvzpEtif54jftZ+2LJWHGWFLnBFhchpvUf
+        3x6JmtJerCGWjAWWjhWLZM2epUUI80zU6Dd92m9m6jyd+xX9pmesvJmg/XXoFYXirCx0g60oREzvr75c
+        hBJS3w/112Cvykdw5RjgpUKxSNYrxkg9/TwTNfrZx37O4TzOvbCD++I15mHtizUF4qwtcIOtzUdsbQHQ
+        nxe1NfluaPOuoQz/5O+v0c8+9ps5Ou9P/jiNeVj7Yn2eOEoTbH0u7lxXgIx4rs2TW6i9koeY0n5FQ+iJ
+        dXlibcrBtYl+0ryrTp/nt9nPOZyX6OdeaszBPKx90TpKnA25bmjiuc9lcON+zG7qQzjSffFX6oZcxFpz
+        YWugoJ7YMEosTwo83Sf5jX3y9DP75WHvKUCdPs9vs9+TApzL+dzDfd6z7pAtzONdU+PNh8R540E39NJ9
+        UrS8V84s65Hzy3uBZb1yaPWncoPrQ0xpQuuJt7zQy3tkjfF6PcpVfKdOn+e32c93ztOewxd6lKeX9kgh
+        NeZgHta+ePcBcZQmdGuXfLaxS/a93o3rW7tluN7PbohKM7XNDyC2OQe2Mrh5JPDOSP1KdiKjNSqyMSoL
+        6aGXd75Tp8/42af99Ki+SHma882eqHyq/QeoMQfzsPbFe/eLs/U+N/T2DjnRtkdeNIJC7weVm1hvvQ+x
+        9+6HvU1D6AntsdT7SNse4IMOuYcenrzznTp9nt9mPz2c19YhX7ImtndgCfeyZg7mMYIf2oaLs324G7r7
+        Y3m/u12O6Vmr5/NK6W2Xya4PMaW9bRiCbSOAHcPF6tsjN/V8LD+rf7eeIZ7ac7L7QwykTp/xax/7zY5d
+        Use5Zr7u6WmX49xLjTmYh7Uvdt0rjtKEPrwNtx7ZKXuP7ASO7JDf9DTfn0T7MMSUtjLYfi/wkYbi+6E2
+        KdOe4+w5vFOO8c536vQZv9tnQgMYcHiHrPHmg/sO7nB/QjEH87D2RUe2OLuHuqEv4IctuPm7D+Qa72rQ
+        MVRO7c6G3akhOoYCe7Iv/p8O+ifn0a1yO0/vKUCdPvrZx35PMuB87vGuBszBPN41Nbqy8G5XlpyIZsqi
+        aJY0J2WmrFMfuu6RkH7cV6n/lL5Fk3o9dmXKXvq+yMGV0SxUs59zknkNdb/JkSVve9FSoy9TBvUOkU7l
+        +X13A8kpP+8bIusRwAD26L1S+XVy7wVSdz8N9un8V82cpF7A7B8inzAPe9JII400/pcIBH4HDD6bJ7rC
+        eWMAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
