--- a/SistemaARD/Vistas/ListaEmpleados.resx
+++ b/SistemaARD/Vistas/ListaEmpleados.resx
@@ -234,34 +234,68 @@
   <data name="btnRegistroEmp.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAC0AAAAtCAYAAAA6GuKaAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABl9JREFUaEPtWV1Mm1UYxqiJ18Z44aWJF3qpN8YLTbzwxsQrTUyM8cK46EorjIGb
-        m2PTyUboD4zfwvr16/8PLZRCW0ppC20ZK+sPjJ9SRmEw9pMN6Fzcypj09ZwDdJSeQTuLQcNJnuT9vvd5
-        3+855zvnPedrCw7aQfu/NUm54c3qYrlOyGNDQi4bzgUiHhtAsWo+l/lgI92/0+rLlBHxCQ30KNzgUOYG
-        u8wFsrNGEBRKk1WFkuKNlHvf0APXQo4gQOL+cyH5KA59ei8WjlGykXZvG37YsDNEFZQL+lt9m8JLN1Lv
-        XcuXaAyPcWBTuJfPYfj8Qun5fEDAkf4u4Eo+2pC8LjrkCKwkHy2v5gPTgfG/DLXmlZZfNKvNJ/ODhjLF
-        E34hg9YN83FKdNDug9X4zP7F8gw0HlNi4aKcRK8sxeCqexDMYgu0VptQ5bDD9eEwlbsXYE7rVpHWhqxF
-        /7EQBeU5Awi4UmBPK8AgUkDTcRmZvw6FnYwELS6fyFm0lt8ODWVyiPn08PhGG8HKfBsMGjSkI4Pmfmpc
-        PpGT6NlwiIzoRK8uJXgrrGI11JcqIHFvmhqfL+Qk2tfmhppiGSTmjFTRMa+edOrG6Ag13t/lQZuPkwqv
-        0QUPbk3BI9RhX7s7dX/EeSkjT06i8ZyVnlFRBWMsjqG5jnJE/YGM2MRiDFTnjdBySksFEgJ3omMQn4sA
-        +6s+db+tvjMjV06inWoHSMqVVMEYd0fXRU9fCVLj84WcRGMfOs3Bw1m66KhbR0QvzkxkxD5GZdJy0Qp6
-        kSknuDSOjFw5ib49OUoqxIhVSxVtrlOC+ASaPsuxjFh8r0duh46mrpzgaXVl5MpJNIahxkTq8uK4IU1w
-        xIVGGXVoyOKhxuUTWYtevh4Bi8RGpgfmNf4kg1CXFmYH9dCvUoOQRw5HUFemhAFTX2bZQ9NjoVEM84Ka
-        HbFoM6fHUZCV6KmhANSVKqG2TAWt8kHodkSBqbKkhIqKZKBp8aD7U6Csd4KQKwN5hQGWZtPndtzrIKJ2
-        wp8TQ2kxNOwqOhYMkdGVVFrANTAHnuDtFPr8C9DjioEncCvtvs0+CfXHccnSkW1/a758YEfRD25GyQi3
-        VJih70q6sN3gcE/DhVIVGC90pD0wH9hRNK7LNUcU4PRdpwrbDSZjeE/q9o6i8fHTbQ3DWHThuWGWOmFu
-        ZDjtof8UWS3E/YZnip5C54dOdMjfJLajM8BMKETsWCAIHY1dKZ+psROuoQqDbfwxYKx9Wra6WqwQvbRe
-        EeZHh1GdfzrHrYwNJnx+Yt+cuEp2QLxz4mu8EY32XyY23tR0gnby8YGvqaITdyfAZ7BDbYkcHi6ECbA9
-        ZHYQm+bD97CNOTjPpk/8sxJcSsuuvpEeF/HFYwFyLT2jhW6mM813fyYMjxevZYoeMvdAfNKFtuou0PG1
-        xMZQn1PDmMNK7KvdFtBWalI+bI/YLMQeRxxlhTrlaxXqINjZSeyIywrys6qUr02kh0CHmdjRPhvIf1PB
-        UsRJrjvq9HDZ2EHsa95uYNHpcmnCCfen+pFozZM00YOt68T9DOa0eu2/J7pclcxa9JzfDroqbbKuRLam
-        Pq9Jzgx0U3kYd0d7wdJkhPqjijUJekgYTTcabxNerQmajyvWmo4p1txyE8QjdB5G1qLxXGs+oUgKudI5
-        QSFzUsSTjaEP3OS9sfU5uB3mBgM6g7AJ8qsQl2lHJ8DkVD+9k0MmMzkhCjhSCdJQjfhJ3AkaFyNr0dNo
-        MWB/1WH2Q8yt5DFv4evRnvUFuB21JWwSiTiFufov9C/W/Mjec0jbqFy8WNHhy4W5uAk4jFKGFiWNi5G1
-        6Hl/DxkNPlf6FeaiUfwE8yddNiq/6ZgcJZZIMJd/SPwaOnQl+pTtVC6uFEIeOys+JH4ZCuAF1AG/pvJp
-        5dqONNE4sa3ZAMvPmE96VALR1/gI4RaxvTJUhp7Fxa8XJU5iwXwOc6SmiE3eCjmo3M23yOewn/F57HvY
-        HrbQ3+Cd4V6oL5Wht8hUEtECLnsOB+yE6iJ2HHOreayH5t8K8kPh9/LXkeijNP92VHEln6O3+T7NtxUi
-        tFYQ9x0iGjf89wNyfId6fYgGIYd5F/NEP8jepvm3oqpQ+inmCopbXkU5v6VxNlF1WPp1+TfSV8rLy19C
-        a+FLGocATc9KzsU3cN6DdtAO2r5oBQV/A1Sp63abQvX6AAAAAElFTkSuQmCC
+        wwAADsMBx2+oZAAABoxJREFUaEPtV31oVXUYtqQilTSKIPowp27TqZtuU2fT6eY+7+zObdc529Q73XQT
+        UtH5AZokOLUopezmSAWFM2p+hV5NnbMm+sdAMMwQAokT/lF/hAbaB8b79j6/87vHc4+7bsdaSOyBh/P8
+        3vf9vc/DHTt369eHPvThwXi5gUa8uoxCryyjs3jirFuPJobVU3pcPd0ZtpR+FB6W8w2cX1tCyXrk0UPC
+        EjorvDyuigbijGdCHX2Duhr4LzG2hhKSaqlz9GK6m1TL/CCOrqVV+poCzl3NOWntpc5RS2ikvvbwSAlS
+        YXINNaUsoivC68L1cl4biymLmGWmXl9XwBn1ruYjxF7hD8Ircm4av4gK9HVvmLiQA+lB5rQg3UhbSHeF
+        23UrJjCfHqSNaUGOixBn1PVITGC/8hE/5VtDZbrVc2QsoP3CTujJC8icPJ+2qsYDkLGAORb1SExgP3yg
+        4Qt/1fCCqVVkTKumMPS0KjKF3YbOquaZsahHYgL74aO0+MJfNbwg+00ysudZoWfMI1N0t6H/CbAfPlqH
+        4a8aXpBbSYZQhc6rJDN3btehCypouPQ2yMyu/AqqDgS4v25FIW8ut8ZicTEPwH74YBa+8FcXvcA3hwyh
+        Cl1UQabo+0IXV1CO1G/7KuiXojl0Veb+Et0hwZ/UIzak1xaLufI+x37RKjR8hd5Dl5ST4S+3Qos2RUeF
+        3rSJH5f6DX+ATsMUtZIAZ8rcn8Kod3VPgP3w0ToMf9XwgvIyMoQqdHkpmaKjQpeWcmKgjLmsjKfrkoLM
+        HRWe0kcbgVK+FJMBHoT98MEsfIXeQ1eWkCFUoeVpzp0dHbqyhDMrZzPP89NYXVKQuZDwij7akFpzLJaX
+        09Py3AofzMIX/uqiF1S9QUa13wpd5SdTGBV6QQmnVvuZq0soQ5cU5N5nMntBH3sM7IcPNHzhrxpeEJxF
+        RrDYCi3arJkVHbpOfuNriumm1OVLgB9DLejjuGAx35L6fd+eNbOY3YSHbkuftsIHGr7OXo9R6yNDqELX
+        FpEp2hWacqR+p87HXOejy6IPysyvOMvz3Er5ketRBanXubm4kLJ1G35b4aN1WOg9dEMBGcsKrdCiTdF2
+        6OV+HiLnn6V+pqGICpYV0OfCc8ItcvY3FNIfDYW8TY8r1Ps41cmGLB6kWwrYDx+tw/BXDS9Ynk/G8jwr
+        9Ip8MuVsh5bzUjnfXemjl3QpCivyeZvM3NzkeF9LjZ18q4AzdUsB++GjtPjCXzW8oDGXDKEKvTqXTNF2
+        aDl/0jiTvl3n42e74uoc8jfmMjfmU4K+0m9VHqc6ucn1SWM/fLQOw181vGBdNhlCFXp9Npmi7dDorc9h
+        7o5rcqJfhw8C9sNH6zA8VMMLNk4nY8MMK/SG6WQK7dDSm/R2Nge649qZPFhf6RbYDx+lxRf+quEF72SR
+        sXmaFXpzFpmi7dC9AeyHj9Zh+KuGFzRNJaNJh94yjUzRvRoa++GjdRj+quEF72WS8e7rVmjRptAOLXqH
+        9K47uX0KzQDd9Qhxr/E8VTdeoOtOrrnAXwdauT/2wwdzMh8W7T30jilk7Jxihd6RQaac7dA7M2juzim8
+        zckPMzgRdNcjxL2mDgo1dTC7ua2NB2M/fNR+8YU/tCfsmkTGR5Ot0KJN0fc+6XE0MJTJzzrZnMpPgO56
+        hLj38VkKhdqZ3WyW0NgPH8zBF/7QnrB7Ihm7063Qok2hHRq95oli5qDUfKC7HiHutZymUMtpZjdbJTT2
+        C1Vo+MID2hP2ppEhVKHlae5Juxd67wSatCeVA07unkAvgu56hLgXPkGhEyeZ3WyT0NgPH7VffOEP7QkH
+        xpOxf7wVWrQptEMfSKMx+1N4ppNGKj8PuusR4t7FYxS6eIzZzUutPBj74YM5+MIf2hOMZDKMFCu0aLMl
+        +V5o9FpS5EfrZDL5FN11Tdy7eoS2fHeEOYqH6fb3J+kp7IeP2i++8ID2hIPjyDg41got2hRthz48jl44
+        NJbjnDyWygNAdz1C3GN5tf10iOOcvHGEnkMP++GjdRj+0J7wRRIZR5Os0EfHkCnaDt0bwH74aB2Gv2p4
+        wfHR9Gl4FF07OYKekad5fFTvhsZ++Gi/a/DXrZ6jLZ4zTyXS76cTmcFTCfS+bvUKZP8Htlci/fZlYvT/
+        nj1G+yga2j6S5rfHU1t7PN86G0/7hM29wH3YLz5nlJ/46ggPj6+G8pDzw2m3sLNjBF/6t4m92N8W1/M/
+        ZfvQh/8P+vX7G1gAoGbN0rovAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnActualizar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABktJREFUWEftl3tQVGUYxrHsojVpU1ZOWKMCIuIVwQtLXARdZNFIZQVB3FUXCCyx
+        UauR0GrAgi5oaSWlY+UoUV5SUaGAvEzZmDVTardJy5qmMp3RVIKet+dsb1sbu7gq5j/8Zt453/u8l/Od
+        s993zlm/dtpp57IjHfxzEOqfh7weeXiexw3+96KG42qOV3O8oEc+ovwmyZVa8P/iX4BOvXIxr2cuvuqV
+        K9IrB79yvKdnDtbz+AJjr1FroB12xnNxrGeurOp9L/ppi0tLdJF0DJ6JGX1m4oc+Dhzn8Zk+2RLT2h0L
+        5h1nTSHtK9ofrFvd1447Ndz29M+VG/vPwPbQ6TjNY5nha8gnQibJ1aybzfqfeTw2YDrMGmo7BsxA0BAb
+        Ph9sx9dD7QhV2QvSITxLblOnBQMycMtgG3axV/MQO+aqfPGYbOg2LAvfRkzDrjCH3KyyV5i3ddg0kYgs
+        7Btmg808C9doyIVxd9nzZWfeVExV+cIxGpoysTsqE5/FT5IuKreKKVNOmDJQwppXeDwblYGf2OORSS3W
+        sXSgvpF5jXdNRayKF0bsFFkcm45fojMQoJJHiorkiph0RMalI4d2hjXphm6aiG4cL6Cdip2CWc7kf2Fx
+        SGfG9sZNweHoLLlW5fNjtBU9zJNxZkwaslVqQXS0dGR8Du2oOU3EnIYfOW5mrXOiBom8gDGT8R17PaqS
+        GwmpCGVdE+sKVTo/klKxknbQmIxKbljS5GaLFR8kWXEyySoLx6b/9cixWOWEJRW2ZKtMY2wffWGfWiPf
+        WegB5i9j7m/jx0tXlXxjIn+ylAlonDABGSq5YbFI55SJ+IT2KdfeHSo7oXaQtc33TMRZHlempGCIhrzC
+        nO7Mb+L57Cr5RmoKsq0paOQkPG6g1HvwHO2Hycm4VSUXvMjbWT/ZuFiVfIL9qmk71PWNzHFYlzEO29V1
+        I9MidzDeOOVupKrUJmQmI4t9mzMScJ1K58ZmwSG7BUXqumFLxgP2ZBw1drpKLh7chbEP7UT5wzsxu2AP
+        OqnsE/YkhNqTRXjeESqdG0cSmrKTMFNdN7LHYhPjq9V1UVqHnNJ6EZfV4b3KSt+/mmaZcQ17NzsssKrU
+        Og5ulPxEERYmq+RGvhkf5idikbouKmpxoKJW5N/2Yg3CNewVR7x0yTNjKc9ZmZeIs+y9j/7a/DFI0xTP
+        GBOdM1pkdoLniRYkYO+c0XhMXRdV1Tjw5jYRN9vqPtG58Qg0ej9gRohKfgWjkU87Rb3yH8OuOQk42/Jt
+        9h/mx+P3efGef/p5o/AW7XV1Xby7WRw0+dve2Sz1//3p58Uhkb1RZMYNKhlagqE9OApBKvnNH4Wl1D5V
+        1zuFcThUGCsL1XWjMAb3FcbilyIPL4KP12PM/vV49qMNuH/PupabaUEsli6Iw/vqKtKB+uc85xLDY9+u
+        zDlJP98Zbo1F0VhL8/h4ejwK3RfG4DTjOSr5hLMuGqdY2+KVTH3WohicXMz1ynEBx8c54es17J0SkziK
+        o/C7UaiSG8UmlBSb5MQTdyFQpVap5ForMWE76w68GCZXqezCmBTjx0uisIbn/Z7jUg21TnE4biqLRGOp
+        CZkquVEUIlcz3lA2EkeeHCmDVPZIKR/gpZGoKouUE09Hev/P9ORIjGfegdKReHtxmG+flE7Kh+OVJcNx
+        yNNaNOCd6cL4liUj0Eh7askICdaQk2UmubF8BOzMOcL40fJhEqahtuWlCPgvD8fpF8K9r8UiP7liWQTs
+        zDu8PEJkWTh+XB6B/bSvqTUx9hvH5byoc/4zuCgqwlBMO7ZicOsfzsKdWxGOoczNoS1aEYaCiqEYxwl2
+        1pRLSyXX4qrB2LlqiHMT+L5uLgfrBqHbmoE4QtttjFW+aNYOhK2yrS++ahACq0Jx6I1QfEMboPIFsYnL
+        gb3WVPXHH+zVpp+KTtYPlK4bQ7BtUz80buyHpzYFnd8GMTYea62s/YJ2bEMIxmmo7TFOtrUv7NXB+I52
+        fGswyreEIK7OyyPMYFsIAqr74n7mfkxrYv2KtwNxu4YvLXv80akmEHNrA3GwNkiE4185rqsJwkracvqv
+        0t7h+EsjXhuEn+iv2NHXtzfZJeG9AIQ0BCK7PgDPNQTgrYbeqOFxS32ArKrvjYfrAjCcj68W/wbaaaed
+        y4af35/jirVrReWwKgAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
