Validacion de contratos individuales

--- a/SistemaARD/Vistas/ListaEmpleados.resx
+++ b/SistemaARD/Vistas/ListaEmpleados.resx
@@ -265,6 +265,44 @@
         ZfvQh/8P+vX7G1gAoGbN0rovAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="btnContrato.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAC0AAAAtCAYAAAA6GuKaAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAB3xJREFUaEPtWH9M1Ocdvm5ru2zN7LpkbbouVbQgID8O5ECgIAjI8Uvkp6DcIaIF
+        tKatbEWt0ogFirpGbfyxaidbIx2eVkWJrbPQObOFmWxNd62zXZcFJ/84McbZnj2ez573yyve7aC1grbL
+        eJIn7/s+n+fzeR/uvncQTOMYxzj+H1Eo39S7rz8il8jdj9Rg5yNLce3HS/Huo9UI1KU7BxViUjWe8avG
+        br8aidfysFBevyrso//apGp5nvv3yb47GjyoUO7xXwKH/xO4FvAEPuLqCqhCvi77IGAJWj090xbhQWpO
+        zuh77E4EV4F5qSOkEq5pFZKbWC/f4nnf9bO2DSG0Cj8MqRRh/SktGVDBqTnJvuBFtzG4Chy+EA5zBVxh
+        HgHV229eiDfIyxELUcT6rES7fFvVouzykLlChFqn6jcaNFRw6s7wCvSZb0dwdaGlHI7ocrgsdt9XNNou
+        ddHlItdpseNDiw1J0Xb0sHZJ9XHf8d/BoxmcupP1vuiyMQyuLoorgyPOBlf8At/A1G2xNri5tjHgxBll
+        MMeWyek4m0hsGfrj7RLJmlX10+cbfB4epO6kd2yCF/KCpPlwzFwAV+IwgWfOh501N9dX6TW+g1MKZQK1
+        Hvb1J5VKpGEkkkthVXOSFqBDzdWygWQGZ83Jnr6E0QRXg1PnwZFaAldaiW/gtBLYWHPT4xWYWk/aPPSn
+        zMN0w+iB1GJY1Tz2DBucupP1vpTiWwiuBmYWw5FRDFdWkW/gzCLYWHOTXoF57iH7rcMEvg4rg6u5nOET
+        PJvBea+T7KPn5oOrQbkFcMwpgGvOMIFzCmBjzZ1beCMw1wk8/5Hsz8kfOfB15ObDaswv9A5ed1L8Kl+S
+        cN7vZL0vL0/8dGlkqAEF+XAU5MFVlOcbuICBWXMX5t0IbDLJXew5VpiP/vxhAhflIUFvvUCvVd3DWUbw
+        phMIa+nGZy9240rtCwhl7R+stWn7yCiZi4bSXLjKiqVw9W9xaPVJ/Ka+S+7XNRtrbtIjsMk0fy5iSueK
+        lOQhQ0tDMOapWq7UackLqkfdR19He7vEHz0CkNd2bcM0as6SXBzQ1pFhz8Zx8lj7mxL562Miim1vwmrL
+        ga08G27WvAIrLMzGgvIckZpCuU9LBuhtULo9R7r1Omzw8jnI4GwX/Yff+wXiujYjhvtT9my5ZMtGqLaN
+        jMpMWVKZJbI4Gys+2I8mcmtNLioqM+EmfQIrLOJg1VOZhapBRe5alIUXlLYoEyuVwlqjcc4aPvjiLORr
+        /0n2/om+S4szEK3LX4xqKxpqMvjKZeC5GiuWke4aq+ypr5dvaIsP6N1Ogt5T5PucMVCVgWd12QDrjYNz
+        hw9enYFe9vWTXVXpMGv55vFkOlY/ORsDy9NFls/GRXvi4N8Sn4flaSil97Xl6dixzIo4LXuBtUZjZrp3
+        cP4gD7H2Ce9cqqVbw1OzxK82FTvJ8+ot1/KoUZuGxto0EdII/myKTOAdp1akou/pNDxgmEaDVcmw1CVj
+        YGUyVmnpluH5eHFe48pZIuTzdbNwamWyXKqb+SWe4S/CmiRpXpsksmYmWuqTEaTlLwX2zl6ThPf4IvxI
+        S0prVHPXJuEq51q0PHq089tiXSLeaUjEwLoEXOHqWp8Aqy7fNBqSMLkhAb3sP7veIzi1xoZEEc72+tCO
+        Cs0JSG1+XKQpXlJ2RsrdzfE4Qfa0xEr4hlR8V9tGRFOiTNRbU0ssJjfFo5c8uz7mRnCeG9UdnPuMlkaH
+        DXHI2xQnsmEGHlXnTbHYrc4GY3HxZ/xhDOMw2DhDpm6Mxaf0/URLRvBNceildnaTR3D6NlL7jNoULd06
+        XkqU+zdH459bYvC3LdE4zHVgcwxeJxO5f5s8X28a+ft7S4w0k0LfUPCXGYznXnIo+NYo/ED5NltQYJhG
+        ix0RmLw9Cr/cbhHZZsF+9Zwb+nQUK01daBg1dkRh1tZYPKyPJnqada9X8G1R6KX2Eefkcf5Ont0/j4K/
+        towefJ4n7J4usns6FnicTxtaJP66azpylN4eJPfw/DF5Zpf5RnD6mpWXvqHgr5gxhb5eQ4/E1VcisUyX
+        xg6tEXJ6TwQ+bo3ACq5/bjXjMtdVe8w4yv0nr5kHn/vWUPjTc466V3D2N5PCnlotGV6eXfTXaGls0RYm
+        E9vCcWxvGP5NutvCsEXpv7Lge23hItR+vzccr74ejqg2huH+HHlmr0fwveHSrLycYwRX7wz3FzlrtWG4
+        ndgXikPkB/tDEOEIwU8doSJcnftCcNYRCtf+UEw7wODUzvF85qBHcGodyk/vYe7/wDmfHggew38fjAR1
+        yaFg/P1QsIjiwWB8qD6gnVNwL/XzB4PwouGbCv9DQegnz3SEDX5TcH+A7CXfZl/nG4F4XOl3BIcj5TtH
+        AhB7NBBtR6eitytI7jsSIt/n+UJnIFq1zdQ5FZ2dgSL0/Iu1d9Weml2XvxqcCEDAW/64TF54KwD95NXj
+        ASLH/bH1eACeo36NbKG+jtxFztatXy3e8cek7ilY2/0YVv8uAA93TcHTPF8gr3D/8l/4gdPWrz/kc35b
+        jmMc4/ifhcn0H0ssEwFdGv2VAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="btnActualizar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
